WIN-3166 avoid pages from getting overwritten with other page data

--- a/projects/lib/src/admin/components/page-list/page-list.component.html
+++ b/projects/lib/src/admin/components/page-list/page-list.component.html
@@ -179,6 +179,7 @@
       (backClicked)="goToList($event)"
       (pageSaved)="onPageSaved($event)"
       (pageDeleted)="onPageDeleted($event)"
+      (pageIsSaving)="isPageSaving($event)"
       [renderSiteUrl]="renderSiteUrl"
       [editorOptions]="editorOptions"
       [resourceType]="resourceType"
