WIP update cms sdk to use winmark methods when needed

--- a/projects/lib/src/admin/components/page-list/page-list.component.html
+++ b/projects/lib/src/admin/components/page-list/page-list.component.html
@@ -192,6 +192,7 @@
       [assetTypes]="assetTypes"
       [additionalAssetFilters]="additionalAssetFilters"
       [defaultListOptions]="defaultListOptions"
+      [isWinmarkApp]="isWinmarkApp"
       [beforeAssetUpload]="beforeAssetUpload"
       [beforeDocumentSave]="beforeDocumentSave"
       (selectedAssetChange)="selectedAssetChange.emit($event)"
